03-vpc-security-groups.tf
resource "aws_security_group" "ssh" {
  name = "${var.vpc_name}-ssh"
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${var.vpc_name}-ssh"
  }

  # SSH access from the VPC
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web" {
  name = "${var.vpc_name}-web"
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${var.vpc_name}-web"
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
